# workBirthdays

./: .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
workBirthdays/: __main__.py
workBirthdays/api/: __init__.py
workBirthdays/api/config/: __init__.py
workBirthdays/api/di/: __init__.py  auth.py  config.py
workBirthdays/api/routes/: __init__.py  birthdays.py
workBirthdays/api/utils/: exceptions.py  url.py
workBirthdays/bot/di/: __init__.py  bot.py  dp.py  jinja.py
workBirthdays/bot/dialogs/: __init__.py  main_menu.py
workBirthdays/bot/filters/: base.py  private.py  user.py
workBirthdays/bot/handlers/: __init__.py  birthdays.py  commands.py
workBirthdays/bot/middlewares/: __init__.py  config.py  context_data.py  context_user.py  logging.py
workBirthdays/bot/states/: admin.py  birthdays.py  start.py  users.py
workBirthdays/bot/utils/: input_validation.py  markdown.py  message.py  router.py  states_factory.py  taskiq_context.py  type_factory.py  ui.py
workBirthdays/bot/views/: alert.py  birthdays.py  buttons.py  commands.py
workBirthdays/core/config/: __init__.py
workBirthdays/core/di/: __init__.py  config.py  dao.py  db.py  lock.py  redis.py  scheduler.py  security.py
workBirthdays/core/factory/: redis.py
workBirthdays/core/scheduler/: context.py  scheduler.py
workBirthdays/core/utils/: dates.py  di_visual.py  dishka_context.py  lock_factory.py
workBirthdays/mq/: broker.py  run.py
workBirthdays/mq/di/: __init__.py  inject.py  taskiq.py
workBirthdays/mq/handlers/: error.py
(+147 files in other folders)
