[tool.poetry]
name = "workBirthdays"
version = "3.0.1"
description = ""
authors = ["rSlow <redmaxx4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.2"
uvicorn = "^0.30.6"
aiogram = "^3.12.0"
alembic = "^1.13.2"
apscheduler = "^3.10.4"
asyncpg = "^0.29.0"
babel = "^2.16.0"
jinja2 = "^3.1.4"
redis = "^5.0.8"
sqlalchemy = "^2.0.32"
adaptix = "^3.0.0b7"
dishka = "^1.3.0"
colorlog = "^6.8.2"
pyjwt = "^2.9.0"
dateutils = "^0.6.12"
passlib = "^1.7.4"
asgi-monitor = "^0.5.0"
pyyaml = "^6.0.2"
sqlalchemy-utils = "^0.41.2"
taskiq = {extras = ["reload"], version = "^0.11.7"}
taskiq-aio-pika = "^0.4.1"
taskiq-redis = "^1.0.2"
faststream = "^0.5.28"
selenium = "^4.25.0"
pypdf2 = "^3.0.1"
pillow = "^11.0.0"
aiogram-dialog = "^2.2.0"
yt-dlp = "^2024.11.4"
eyed3 = "^0.9.7"
fake-useragent = "^2.0.1"
bs4 = "^0.0.2"
python-dateutil = "^2.9.0.post0"
selenium-wire = "^5.1.0"
blinker = "1.7.0"
setuptools = "^75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
